CSS/style.css
/* ... */
.shape-image.shape-image-37 {
  bottom: 100px;
  left: -30px;
}

.shape-image.shape-image-38 {
  top: 450px;
  left: 230px;
  z-index: -1;
  transform: rotate(16deg);
}

.shape-image.shape-image-39 {
  bottom: 10px;
  right: 30px;
  transform: rotate(16deg);
}

.shape-image.shape-image-40 {
  bottom: 50px;
  left: 30px;
  transform: rotate(-16deg);
}

.shape-image.shape-image-41 {
  bottom: 10px;
  right: -5px;
}

.shape-image.shape-image-42 {
  top: 50px;
  left: -35px;
}

.shape-image.shape-image-43 {
  top: 10px;
  right: -50px;
  transform: rotate(-35deg);
}

.shape-image.shape-image-44 {
  bottom: 210px;
  right: -50px;
  transform: rotate(-35deg);
}

.shape-image.shape-image-45 {
  bottom: 110px;
  left: -50px;
  transform: rotate(-35deg);
}

.shape-image.shape-image-46 {
  top: 110px;
  left: -20px;
  transform: rotate(-35deg);
}

.shape-image.shape-image-47 {
  top: 0px;
  right: -150px;
  transform: rotate(-60deg);
}

/* End of shapes */
.topic {
  background-color: var(--cc-white-sugar);
  border-radius: 5px;
  padding: 40px;
}

.topic img.white {
  display: none;
}

.topic:hover {
  background-color: var(--cc-primary-bg);
  color: var(--cc-white-sugar);
}

.topic:hover img.white {
  display: block;
}

.topic:hover img.primary {
  display: none;
}

#gallery {
  flex: 3;
}

#about-info {
  flex: 4;
}

.images-about {
  flex: 2;
}

.img-item img {
  max-width: 180px;
  width: 100%;
  height: 100%;
  min-height: 207px;
}

/*@  ************************************************************************************
  1400px
****************************************************************************************/

@media screen and (max-width: 1400px) {
  .img-item img {
    max-width: 250px;
    width: 100%;
    height: 100%;
    min-height: 207px;
  }

  .images-about {
    flex: 1;
  }
}

/*@  ************************************************************************************
  567px
****************************************************************************************/

@media screen and (max-width: 567px) {
  .img-item img {
    margin: auto;
  }

  .images-about {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

section#about {
  background-color: var(--cc-white-off);
}

.icon {
  flex: 1;
}

.tip {
  flex: 4;
}

.about-tip {
  flex-direction: column;
  flex: 1;
}

.about-masonry-img {
  max-height: 300px;
  max-width: 366px;
}

#virtual-classes {
  padding-bottom: 300px;
}

#virtual-classes--intro {
  justify-content: space-between;
}

.vclass-tabs {
  border-radius: 5px;
  border: 1px solid transparent;
  transition: 0.4s;
}

.is-active {
  background-color: var(--cc-primary-bg);
  color: var(--cc-white-sugar);
}

.vclass-tabs:hover {
  background-color: var(--cc-primary-bg);
  color: var(--cc-white-sugar);
}

.ratings {
  justify-content: space-between;
}

.rating-stars {
  color: var(--cc-distinct);
  align-items: center;
}

.rating-stars .vicon-star {
  margin-right: 3px;
}

.rating-stars .votes {
  margin-left: 10px;
  color: var(--cc-bg-dark);
}

.bi-heart-fill {
  color: rgb(235, 85, 85);
}

button.heart {
  border: none;
  border-radius: 50%;
  padding: 10px;
  background-color: var(--cc-primary);
  width: 36px;
  height: 36px;
}

button.heart:active .bi-heart-fill {
  color: rgb(236, 146, 146);
}

.price-current {
  font-size: 1.5rem;
  font-weight: bold;
}

.price-prev {
  font-size: 1.25rem;
}

.card-body h3,
.blogpost-card-body h3 {
  font-size: 1.25rem;
}

.card-body p,
.blogpost-card-body p {
  font-size: 1rem;
}

#vclasses-list {
  max-width: 1200px;
}

#vclasses-list .card {
  min-width: 340px;
  max-width: 340px;
  width: auto;
  margin: 25px auto 0px;
}

.tutor,
.author {
  justify-content: space-between;
  align-items: center;
}

.tutor h4,
.author-profile h4 {
  font-size: 16px;
}

.tutor img,
.author-profile img {
  border-radius: 50%;
}

.tutor-lessons {
  align-items: center;
  font-size: 16px;
}

.lesson-icon svg {
  color: var(--cc-primary);
}

.card,
.blogpost-card {
  box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.06);
  background-color: var(--cc-white-off);
  overflow: hidden;
}

.card-img-container {
  overflow: hidden;
}

.card-img-container img {
  object-fit: contain;
  width: 100%;
  overflow: hidden;
}

.card:hover img,
.card:focus img {
  transform: scale(1.07);
  transition: 0.3s;
}

.card-body {
  z-index: 1;
  position: relative;
}

.video-gallery-wrapper {
  border-radius: 5px;
  border: 10px solid var(--cc-white-sugar);
  max-width: 950px;
  width: 950px;
  height: 450px;
  max-height: 450px;
  background: var(--cc-primary-bg) url("../img/back-to-school-thumbnail.png");
  background-repeat: no-repeat;
  background-size: auto;
  box-shadow: 0px 10px 45px rgba(0, 0, 0, 0.07);
  z-index: 99;
  position: relative;
  margin: -550px auto 50px;
}

.video-gallery-wrapper .thumbnail {
  max-width: 30%;
  margin: 15% 40%;
}

.video-gallery-wrapper a::after {
  background-color: transparent;
}

#events-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right bottom,
    var(--cc-white-off),
    var(--cc-distinct-light)
  );
  padding-top: 300px;
  position: relative;
}

#event-list {
  flex-direction: column;
  border-radius: 5px;
}

.event-item {
  background-color: var(--cc-white-sugar);
  max-width: 1100px;
  width: 100%;
  margin: 0 auto;
  align-items: center;
  border-radius: 5px;
}

.event-thumbnail {
  flex: 1;
  overflow: hidden;
}

.event-book {
  flex: 1;
}

.event-thumbnail img {
  border-radius: 5px;
  object-fit: contain;
  width: 100%;
  overflow: hidden;
}

.event-thumbnail:hover img {
  transform: scale(0.97);
  transition: 0.3s;
}

.event-thumbnail a::after {
  background-color: transparent;
}

.event-info {
  flex: 4;
}

.info-wrapper {
  flex: 4;
}

.event-info a::after {
  background-color: transparent;
}

.event-info a {
  color: var(--cc-bg-dark);
}

.event-info a:hover {
  color: var(--cc-primary);
}

.event-vicon {
  width: 18px;
  height: 18px;
}
/* ... */

